# cgajam_racer

./: .gitignore  CMakeLists.txt  README.md  carsim.cpp  carsim.h  cga_enforce.fs  cga_racer.sublime-project  cga_racer.sublime-workspace  cgajam_racer.cpp  dither.cpp  dither.h  engine_noise.cpp  engine_noise.h  mountain1.mtl  syncdata_cam-3Aattr.up.track  syncdata_cam-3Aattr.y.track  syncdata_cam-3Aattr.z.track  syncdata_fx-3Amirror.track  track.cpp  track.h  turbo_electric_sync.rocket  util.h  world.fs  world.vs  world_mtl.fs
gamedata/: syncdata_cam-3Aattr.x.track  syncdata_cam-3AtrackP.track  syncdata_env-3Agridsz.track  world.fs
imgui/: imgui_impl_glfw_gl3.cpp
